create database storage